@@ -1,5 +1,5 @@
 /*
- *    Copyright 2015 West Coast Informatics, LLC
+ *    Copyright 2019 West Coast Informatics, LLC
  */
 package org.ihtsdo.otf.mapping.jpa.handlers;
 
@@ -15,6 +15,7 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -155,7 +156,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
 
   /** Concept ids read in from previous release file **/
   private Set<String> conceptsFromReleaseFile = new HashSet<>();
-  
+
   /** The begin log. */
   private static Logger beginLog;
 
@@ -255,7 +256,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
       logger = processLog;
 
       logger.info("  Starting processing the release");
-      
+
       // Keep track of all of the created files
       final List<String> createdFilenames = new ArrayList<>();
 
@@ -768,9 +769,8 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
             "  " + terminologyId + ": " + conceptErrors.get(terminologyId));
       }
 
-
       logger.info("  Done processing the release");
-      
+
       // /////////////////////////////////////////////////////
       // Clean up
       // /////////////////////////////////////////////////////
@@ -1019,10 +1019,10 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
     // Open file
     String filename = null;
     BufferedWriter writer = null;
-    filename = outputDir + "/der2_ssRefset_ModuleDependencyDelta_"+algorithmHandler.getReleaseFile3rdElement()+"_"
-        + effectiveTime + ".txt";
+    filename = outputDir + "/der2_ssRefset_ModuleDependencyDelta_"
+        + algorithmHandler.getReleaseFile3rdElement() + "_" + effectiveTime
+        + ".txt";
     writer = new BufferedWriter(new FileWriter(filename));
-    
 
     // Write header
     writer.write(
@@ -1062,13 +1062,15 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
     BufferedWriter writer = null;
     String pattern = getPatternForType(mapProject);
     filename = outputDir + "/der2_" + pattern + mapProject.getMapRefsetPattern()
-        + "Delta_"+algorithmHandler.getReleaseFile3rdElement()+"_" + effectiveTime + ".txt";
+        + "Delta_" + algorithmHandler.getReleaseFile3rdElement() + "_"
+        + effectiveTime + ".txt";
     logger.info("  delta:  " + filename);
 
     // Write headers (subject to pattern)
-   // writer = new BufferedWriter(new FileWriter(filename));
-    writer = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(filename), StandardCharsets.UTF_8));
-    
+    // writer = new BufferedWriter(new FileWriter(filename));
+    writer = new BufferedWriter(new OutputStreamWriter(
+        new FileOutputStream(filename), StandardCharsets.UTF_8));
+
     writer.write(getHeader(mapProject));
     writer.write("\r\n");
 
@@ -1164,7 +1166,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
       alwaysNc.add(key);
       neverNc.add(key);
       if (!entryCount.containsKey(key)) {
-        entryCount.put(key, new Integer(0));
+        entryCount.put(key, Integer.valueOf(0));
       }
       int maxCt = entryCount.get(key).intValue() + 1;
       entryCount.put(key, maxCt);
@@ -1235,7 +1237,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
             + mapProject.getDestinationTerminology().substring(1).toLowerCase();
     final String filename = outputDir + "/" + camelCaseName + "stats.txt";
     BufferedWriter statsWriter = new BufferedWriter(new FileWriter(filename));
-    
+
     List<String> statistics = new ArrayList<>(reportStatistics.keySet());
     Collections.sort(statistics);
     for (final String statistic : statistics) {
@@ -1263,14 +1265,16 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
     String filename = null;
     BufferedWriter writer = null;
     filename = outputDir + "/der2_" + pattern + mapProject.getMapRefsetPattern()
-        + "ActiveSnapshot_"+algorithmHandler.getReleaseFile3rdElement()+"_" + effectiveTime + ".txt";
+        + "ActiveSnapshot_" + algorithmHandler.getReleaseFile3rdElement() + "_"
+        + effectiveTime + ".txt";
 
     // write headers
     logger.info("  active snapshot:  " + filename);
 
-    //writer = new BufferedWriter(new FileWriter(filename));
-    writer = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(filename), StandardCharsets.UTF_8));
-    
+    // writer = new BufferedWriter(new FileWriter(filename));
+    writer = new BufferedWriter(new OutputStreamWriter(
+        new FileOutputStream(filename), StandardCharsets.UTF_8));
+
     writer.write(getHeader(mapProject));
     writer.write("\r\n");
 
@@ -1323,14 +1327,16 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
     String filename = null;
     BufferedWriter writer = null;
     filename = outputDir + "/der2_" + pattern + mapProject.getMapRefsetPattern()
-        + "Snapshot_"+algorithmHandler.getReleaseFile3rdElement()+"_" + effectiveTime + ".txt";
+        + "Snapshot_" + algorithmHandler.getReleaseFile3rdElement() + "_"
+        + effectiveTime + ".txt";
 
     // write headers
     logger.info("  snapshot file:  " + filename);
 
-    //writer = new BufferedWriter(new FileWriter(filename));
-    writer = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(filename), StandardCharsets.UTF_8));
-    
+    // writer = new BufferedWriter(new FileWriter(filename));
+    writer = new BufferedWriter(new OutputStreamWriter(
+        new FileOutputStream(filename), StandardCharsets.UTF_8));
+
     writer.write(getHeader(mapProject));
     writer.write("\r\n");
 
@@ -1411,10 +1417,13 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
         mapProject.getDestinationTerminology().substring(0, 1)
             + mapProject.getDestinationTerminology().substring(1).toLowerCase();
     humanReadableFileName = outputDir + "/tls_" + camelCaseName
-        + "HumanReadableMap_"+algorithmHandler.getReleaseFile3rdElement()+"_" + effectiveTime + ".tsv";
+        + "HumanReadableMap_" + algorithmHandler.getReleaseFile3rdElement()
+        + "_" + effectiveTime + ".tsv";
     humanReadableWriter =
-    //    new BufferedWriter(new FileWriter(humanReadableFileName));
-    new BufferedWriter(new OutputStreamWriter(new FileOutputStream(humanReadableFileName), StandardCharsets.UTF_8));
+        // new BufferedWriter(new FileWriter(humanReadableFileName));
+        new BufferedWriter(
+            new OutputStreamWriter(new FileOutputStream(humanReadableFileName),
+                StandardCharsets.UTF_8));
 
     // Write headers (subject to pattern)
     MapRefsetPattern pattern = mapProject.getMapRefsetPattern();
@@ -1445,8 +1454,9 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
       // get the map relation name for the human readable file
       MapRelation mapRelation = null;
       for (final MapRelation mr : mapProject.getMapRelations()) {
-        if (mr.getTerminologyId() != null && member.getMapRelationId() != null && 
-            mr.getTerminologyId().equals(member.getMapRelationId().toString())) {
+        if (mr.getTerminologyId() != null && member.getMapRelationId() != null
+            && mr.getTerminologyId()
+                .equals(member.getMapRelationId().toString())) {
           mapRelation = mr;
         }
       }
@@ -1689,7 +1699,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
     // NOTE: do not set UUID here, done in main logic
     complexMapRefSetMember.setConcept(concept);
     complexMapRefSetMember.setRefSetId(mapProject.getRefSetId());
-    complexMapRefSetMember.setModuleId(new Long(moduleId));
+    complexMapRefSetMember.setModuleId(Long.valueOf(moduleId));
     complexMapRefSetMember.setActive(true);
     complexMapRefSetMember.setEffectiveTime(dateFormat.parse(effectiveTime));
     complexMapRefSetMember.setTerminology(mapProject.getSourceTerminology());
@@ -2002,8 +2012,10 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
     if (mapProject.getMapRefsetPattern() == MapRefsetPattern.ExtendedMap) {
       entryLine = member.getTerminologyId() // the UUID
           + "\t"
-          + ((trueEffectiveTimeFlag && !dateFormat.format(member.getEffectiveTime()).equals("100070607"))
-              ? dateFormat.format(member.getEffectiveTime()) : effectiveTime)
+          + ((trueEffectiveTimeFlag && !dateFormat
+              .format(member.getEffectiveTime()).equals("100070607"))
+                  ? dateFormat.format(member.getEffectiveTime())
+                  : effectiveTime)
           + "\t" + (member.isActive() ? "1" : "0") + "\t" + moduleId + "\t"
           + member.getRefSetId() + "\t" + member.getConcept().getTerminologyId()
           + "\t" + member.getMapGroup() + "\t" + member.getMapPriority() + "\t"
@@ -2018,8 +2030,10 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
     else if (mapProject.getMapRefsetPattern() == MapRefsetPattern.ComplexMap) {
       entryLine = member.getTerminologyId() // the UUID
           + "\t"
-          + ((trueEffectiveTimeFlag && !dateFormat.format(member.getEffectiveTime()).equals("100070607"))
-              ? dateFormat.format(member.getEffectiveTime()) : effectiveTime)
+          + ((trueEffectiveTimeFlag && !dateFormat
+              .format(member.getEffectiveTime()).equals("100070607"))
+                  ? dateFormat.format(member.getEffectiveTime())
+                  : effectiveTime)
           + "\t" + (member.isActive() ? "1" : "0") + "\t" + moduleId + "\t"
           + member.getRefSetId() + "\t" + member.getConcept().getTerminologyId()
           + "\t" + member.getMapGroup() + "\t" + member.getMapPriority() + "\t"
@@ -2038,8 +2052,10 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
       }
       entryLine = member.getTerminologyId() // the UUID
           + "\t"
-          + ((trueEffectiveTimeFlag && !dateFormat.format(member.getEffectiveTime()).equals("100070607"))
-              ? dateFormat.format(member.getEffectiveTime()) : effectiveTime)
+          + ((trueEffectiveTimeFlag && !dateFormat
+              .format(member.getEffectiveTime()).equals("100070607"))
+                  ? dateFormat.format(member.getEffectiveTime())
+                  : effectiveTime)
           + "\t" + (member.isActive() ? "1" : "0") + "\t" + moduleId + "\t"
           + member.getRefSetId() + "\t" + member.getConcept().getTerminologyId()
           + "\t" + member.getMapTarget();
@@ -2122,7 +2138,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
 
         // if active and type id matches
         if (description.isActive()
-            && description.getTypeId().equals(new Long(dpnTypeId))) {
+            && description.getTypeId().equals(Long.valueOf(dpnTypeId))) {
 
           // cycle over language ref sets
           for (final LanguageRefSetMember language : description
@@ -2130,7 +2146,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
 
             if (language.getRefSetId().equals(dpnRefSetId)
                 && language.isActive() && language.getAcceptabilityId()
-                    .equals(new Long(dpnAcceptabilityId))) {
+                    .equals(Long.valueOf(dpnAcceptabilityId))) {
 
               defaultPreferredNames.put(concept.getTerminologyId(),
                   description.getTerm());
@@ -2173,7 +2189,6 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
 
       logger = beginLog;
       clearLog(logger);
-      
 
       logger.info("  Starting begin release");
 
@@ -2193,7 +2208,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
               + " AND workflowStatus:PUBLISHED", null)
           .getSearchResults().size() > 0) {
         final ContentService contentService = new ContentServiceJpa();
-        
+
         try {
           if (contentService
               .getComplexMapRefSetMembersForRefSetId(mapProject.getRefSetId())
@@ -2274,7 +2289,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
         if (list == null) {
           list = new ArrayList<>();
         }
-        
+
         // Don't include up-propagated refset member entries
         // Skip concept exclusion rules
         if (member.getMapRule() != null
@@ -2299,7 +2314,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
             continue;
           }
         }
-        
+
         list.add(member);
         refsetMemberMap.put(member.getConcept().getId(), list);
       }
@@ -2514,8 +2529,8 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
       for (ComplexMapRefSetMember member : members
           .getComplexMapRefSetMembers()) {
         Concept sourceConcept = member.getConcept();
-        if (member.isActive() && sourceConcept != null && sourceConcept.isActive()
-            && !conceptMapRecordCountMap
+        if (member.isActive() && sourceConcept != null
+            && sourceConcept.isActive() && !conceptMapRecordCountMap
                 .containsKey(member.getConcept().getTerminologyId())) {
           this.addReportError(report, mapProject,
               member.getConcept().getTerminologyId(),
@@ -2562,7 +2577,6 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
           mappingService.commit();
         }
       }
-    
 
       logger.info("  Done begin release");
 
@@ -2634,18 +2648,20 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
       }
       clearLog(logger);
 
-      logger.info("Starting " + (testModeFlag ? "Preview Finish Release" : "Finish Release"));
-      logger.info("transactionPerOperation " + mappingService.getTransactionPerOperation());
-    Logger.getLogger(getClass())
-    .info("transactionPerOperation " + mappingService.getTransactionPerOperation());
+      logger.info("Starting "
+          + (testModeFlag ? "Preview Finish Release" : "Finish Release"));
+      logger.info("transactionPerOperation "
+          + mappingService.getTransactionPerOperation());
+      Logger.getLogger(getClass()).info("transactionPerOperation "
+          + mappingService.getTransactionPerOperation());
 
       // instantiate required services
-      /*final MappingService mappingService = new MappingServiceJpa();
-      if (!testModeFlag) {
-        mappingService.setTransactionPerOperation(false);
-        mappingService.beginTransaction();
-      }*/
-      
+      /*
+       * final MappingService mappingService = new MappingServiceJpa(); if
+       * (!testModeFlag) { mappingService.setTransactionPerOperation(false);
+       * mappingService.beginTransaction(); }
+       */
+
       // compare file to current records
       Report report = compareInputFileToExistingMapRecords();
 
@@ -2664,7 +2680,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
         MapRecordList mapRecordList = mappingService
             .getPublishedAndReadyForPublicationMapRecordsForMapProject(
                 mapProject.getId(), null);
-        mapRecords = mapRecordList.getMapRecords();  
+        mapRecords = mapRecordList.getMapRecords();
 
         // Log recently edited records that won't be PUBLISHED
         for (Long recordId : recentlyEditedRecords) {
@@ -2692,9 +2708,9 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
           // since
           // the publication date
           else if (record
-              .getWorkflowStatus() == WorkflowStatus.READY_FOR_PUBLICATION &&
-                		recentlyEditedRecords.contains(record.getId()) &&
-                		conceptsFromReleaseFile.contains(record.getConceptId())) {
+              .getWorkflowStatus() == WorkflowStatus.READY_FOR_PUBLICATION
+              && recentlyEditedRecords.contains(record.getId())
+              && conceptsFromReleaseFile.contains(record.getConceptId())) {
             logger.info("  Record not updated to PUBLISHED for "
                 + record.getConceptId() + " " + record.getConceptName());
 
@@ -2723,9 +2739,9 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
         if (!testModeFlag) {
 
           mapProject.setLatestPublicationDate(new Date());
-          //mapProject.setPublic(true);
+          // mapProject.setPublic(true);
           mappingService.updateMapProject(mapProject);
-          //mappingService.commit();
+          // mappingService.commit();
         }
       }
 
@@ -2750,10 +2766,10 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
       reportService.close();
 
       mappingService.close();
-      
+
       logger.info("Finished " + (testModeFlag ? "test mode " : "")
           + "release successfully");
-      
+
     } catch (Exception e) {
       logger.error(e.getMessage(), e);
       throw new Exception(e);
@@ -3027,26 +3043,28 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
             continue;
           }
         }
-        
-        
-        
-        
+
         List<ComplexMapRefSetMember> members =
             conceptRefSetMap.get(member.getConcept().getTerminologyId());
         if (members == null) {
           members = new ArrayList<>();
         }
-        
-        // if we get a TRUE/MAP SOURCE CONCEPT CANNOT BE CLASSIFIED WITH AVAILABLE DATA member
+
+        // if we get a TRUE/MAP SOURCE CONCEPT CANNOT BE CLASSIFIED WITH
+        // AVAILABLE DATA member
         // AND we've already seen a TRUE member
         // AND it's not in the same map group as an allowed IFA member
-        // skip this member.  It is due to up-propagation and shouldn't be compared.
-        if (member.getMapRule() != null && member.getMapRule().equals("TRUE") && 
-        	member.getMapAdvice() != null && member.getMapAdvice().equals("MAP SOURCE CONCEPT CANNOT BE CLASSIFIED WITH AVAILABLE DATA") &&
-            containsTrueMember(members) && !containsIFAMember(members, member.getMapGroup())) {
+        // skip this member. It is due to up-propagation and shouldn't be
+        // compared.
+        if (member.getMapRule() != null && member.getMapRule().equals("TRUE")
+            && member.getMapAdvice() != null
+            && member.getMapAdvice().equals(
+                "MAP SOURCE CONCEPT CANNOT BE CLASSIFIED WITH AVAILABLE DATA")
+            && containsTrueMember(members)
+            && !containsIFAMember(members, member.getMapGroup())) {
           continue;
         }
-        
+
         members.add(member);
         conceptRefSetMap.put(member.getConcept().getTerminologyId(), members);
         conceptsFromReleaseFile.add(member.getConcept().getTerminologyId());
@@ -3260,7 +3278,6 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
 
   }
 
-  
   private boolean containsTrueMember(List<ComplexMapRefSetMember> members) {
     for (ComplexMapRefSetMember m : members) {
       if (m.getMapRule().equals("TRUE")) {
@@ -3269,8 +3286,9 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
     }
     return false;
   }
-  
-  private boolean containsIFAMember(List<ComplexMapRefSetMember> members, int mapGroup) {
+
+  private boolean containsIFAMember(List<ComplexMapRefSetMember> members,
+    int mapGroup) {
     for (ComplexMapRefSetMember m : members) {
       if (m.getMapRule().matches("IFA.*") && m.getMapGroup() == mapGroup) {
         return true;
@@ -3278,6 +3296,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
     }
     return false;
   }
+
   /**
    * Update statistic max.
    *
@@ -3336,7 +3355,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
   @Override
   public void setMapProject(MapProject mapProject)
     throws InstantiationException, IllegalAccessException,
-    ClassNotFoundException {
+    InvocationTargetException, NoSuchMethodException, ClassNotFoundException {
     this.mapProject = mapProject;
     // instantiate the algorithm handler
     algorithmHandler =
@@ -3387,7 +3406,7 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
       logger.error(e.getStackTrace());
     }
   }
-  
+
   private void clearLog(Logger logger) {
     try {
       String rootPath = ConfigUtility.getConfigProperties()
@@ -3404,13 +3423,13 @@ public class ReleaseHandlerJpa implements ReleaseHandler {
         File beginLogFile = new File(logDirectory, "begin.log");
         PrintWriter writer = new PrintWriter(beginLogFile);
         writer.print("");
-        writer.close();      
+        writer.close();
       }
       if (logger == processLog) {
         File processLogFile = new File(logDirectory, "process.log");
         PrintWriter writer = new PrintWriter(processLogFile);
         writer.print("");
-        writer.close();      
+        writer.close();
       }
 
       File previewFinishLogFile = new File(logDirectory, "previewFinish.log");
