@@ -1,3 +1,6 @@
+/*
+ *    Copyright 2019 West Coast Informatics, LLC
+ */
 package org.ihtsdo.otf.mapping.jpa.services;
 
 import java.util.ArrayList;
@@ -29,9 +32,6 @@ import org.ihtsdo.otf.mapping.helpers.SearchResult;
 import org.ihtsdo.otf.mapping.helpers.SearchResultJpa;
 import org.ihtsdo.otf.mapping.helpers.SearchResultList;
 import org.ihtsdo.otf.mapping.helpers.SearchResultListJpa;
-import org.ihtsdo.otf.mapping.jpa.FeedbackJpa;
-import org.ihtsdo.otf.mapping.model.Feedback;
-import org.ihtsdo.otf.mapping.model.FeedbackConversation;
 import org.ihtsdo.otf.mapping.model.MapProject;
 import org.ihtsdo.otf.mapping.model.MapUser;
 import org.ihtsdo.otf.mapping.reports.Report;
@@ -47,8 +47,6 @@ import org.ihtsdo.otf.mapping.reports.ReportResultJpa;
 import org.ihtsdo.otf.mapping.services.MappingService;
 import org.ihtsdo.otf.mapping.services.MetadataService;
 import org.ihtsdo.otf.mapping.services.ReportService;
-import org.ihtsdo.otf.mapping.workflow.TrackingRecord;
-import org.ihtsdo.otf.mapping.workflow.TrackingRecordJpa;
 
 /**
  * JPA enabled implementation of {@link ReportService}.
@@ -109,14 +107,13 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     final SearchResultList list = new SearchResultListJpa();
 
     final int[] totalCt = new int[1];
-    final List<Report> reports =
-        (List<Report>) this.getQueryResults(query, ReportJpa.class,
-            ReportJpa.class, pfsParameter, totalCt);
+    final List<Report> reports = (List<Report>) this.getQueryResults(query,
+        ReportJpa.class, ReportJpa.class, pfsParameter, totalCt);
     list.setTotalCount(totalCt[0]);
 
     for (final Report report : reports) {
-      list.addSearchResult(new SearchResultJpa(report.getId(), null, report
-          .getName(), ""));
+      list.addSearchResult(
+          new SearchResultJpa(report.getId(), null, report.getName(), ""));
     }
 
     return list;
@@ -136,7 +133,7 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     // handle lazy initialization
     report.getNotes().size();
     report.getResults().size();
-    
+
     for (final ReportResult result : report.getResults()) {
       result.getReportResultItems().size();
     }
@@ -185,18 +182,16 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     if (getTransactionPerOperation()) {
       tx = manager.getTransaction();
       tx.begin();
-      Report ma =
-          manager.find(ReportJpa.class, reportId);
+      Report ma = manager.find(ReportJpa.class, reportId);
 
       if (manager.contains(ma)) {
         manager.remove(ma);
       } else {
         manager.remove(manager.merge(ma));
       }
-      tx.commit(); 
+      tx.commit();
     } else {
-      Report ma =
-          manager.find(ReportJpa.class, reportId);
+      Report ma = manager.find(ReportJpa.class, reportId);
       if (manager.contains(ma)) {
         manager.remove(ma);
       } else {
@@ -285,9 +280,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
   public ReportResultItem getReportResultItem(Long reportResultItemId) {
     ReportResultItem r = null;
 
-    javax.persistence.Query query =
-        manager
-            .createQuery("select r from ReportResultItemJpa r where id = :id");
+    javax.persistence.Query query = manager
+        .createQuery("select r from ReportResultItemJpa r where id = :id");
     query.setParameter("id", reportResultItemId);
 
     r = (ReportResultItem) query.getSingleResult();
@@ -297,7 +291,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
 
   /* see superclass */
   @Override
-  public ReportResultItem addReportResultItem(ReportResultItem reportResultItem) {
+  public ReportResultItem addReportResultItem(
+    ReportResultItem reportResultItem) {
     if (getTransactionPerOperation()) {
       tx = manager.getTransaction();
       tx.begin();
@@ -426,8 +421,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
   private void handleReportLazyInitialization(Report report) {
     report.getNotes().size();
     report.getResults().size();
-    
-   for (final ReportResult result : report.getResults()) {
+
+    for (final ReportResult result : report.getResults()) {
       result.getReportResultItems().size();
     }
 
@@ -440,10 +435,10 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     ReportDefinitionList definitionList = new ReportDefinitionListJpa();
 
     // get all definitions
-    final List<ReportDefinition> definitions =
-        manager.createQuery(
+    final List<ReportDefinition> definitions = manager
+        .createQuery(
             "select d from ReportDefinitionJpa d where isQACheck = false")
-            .getResultList();
+        .getResultList();
 
     // cycle over definitions and check if role has required privileges
     for (final ReportDefinition definition : definitions) {
@@ -463,9 +458,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     List<ReportDefinition> reportDefinitions = null;
 
     // construct query
-    final javax.persistence.Query query =
-        manager
-            .createQuery("select m from ReportDefinitionJpa m where isQACheck = false");
+    final javax.persistence.Query query = manager.createQuery(
+        "select m from ReportDefinitionJpa m where isQACheck = false");
 
     reportDefinitions = query.getResultList();
 
@@ -481,9 +475,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
   public ReportDefinition getReportDefinition(Long reportDefinitionId) {
     ReportDefinition r = null;
 
-    final javax.persistence.Query query =
-        manager
-            .createQuery("select r from ReportDefinitionJpa r where id = :id");
+    final javax.persistence.Query query = manager
+        .createQuery("select r from ReportDefinitionJpa r where id = :id");
     query.setParameter("id", reportDefinitionId);
 
     r = (ReportDefinition) query.getSingleResult();
@@ -493,7 +486,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
 
   /* see superclass */
   @Override
-  public ReportDefinition addReportDefinition(ReportDefinition reportDefinition) {
+  public ReportDefinition addReportDefinition(
+    ReportDefinition reportDefinition) {
     if (getTransactionPerOperation()) {
       tx = manager.getTransaction();
       tx.begin();
@@ -577,11 +571,10 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     MapProject mapProject, ReportDefinition reportDefinition,
     PfsParameter pfsParameter) {
 
-    Logger.getLogger(getClass()).info(
-        "Retrieving reports for project "
-            + mapProject.getName()
-            + (reportDefinition == null ? "" : " of type "
-                + reportDefinition.getName()));
+    Logger.getLogger(getClass())
+        .info("Retrieving reports for project " + mapProject.getName()
+            + (reportDefinition == null ? ""
+                : " of type " + reportDefinition.getName()));
 
     // instantiate empty paging/filtering/sorting object if null
     PfsParameter localPfsParameter = pfsParameter;
@@ -597,23 +590,21 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     // if definition supplied, return only results for that definition
     if (reportDefinition != null) {
 
-      query =
-          manager.createQuery(
-              "select r from ReportJpa r "
-                  + "where mapProjectId = :mapProjectId "
-                  + "and reportDefinition_id = :reportDefinition_id "
-                  + "order by timestamp desc").setParameter(
-              "reportDefinition_id", reportDefinition.getId());
+      query = manager
+          .createQuery("select r from ReportJpa r "
+              + "where mapProjectId = :mapProjectId "
+              + "and reportDefinition_id = :reportDefinition_id "
+              + "order by timestamp desc")
+          .setParameter("reportDefinition_id", reportDefinition.getId());
 
       // if no definition supplied, return all results, excluding QA
       // checks
     } else {
-      query =
-          manager
-              .createQuery("select r from ReportJpa r, ReportDefinitionJpa d "
-                  + "where mapProjectId = :mapProjectId "
-                  + "and r.reportDefinition = d " + "and d.isQACheck = false "
-                  + "order by timestamp desc");
+      query = manager
+          .createQuery("select r from ReportJpa r, ReportDefinitionJpa d "
+              + "where mapProjectId = :mapProjectId "
+              + "and r.reportDefinition = d " + "and d.isQACheck = false "
+              + "order by timestamp desc");
     }
 
     // add project parameter for both cases
@@ -692,8 +683,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
 
       cal.setTime(localStartDate);
 
-      Logger.getLogger(getClass()).info(
-          "  Generating reports for " + localStartDate);
+      Logger.getLogger(getClass())
+          .info("  Generating reports for " + localStartDate);
 
       // first, do the non-diff reports
       // note that these must be calculated prior to diff reports
@@ -703,8 +694,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
 
           // Only generate reports for those that have queries
           if (reportDefinition.getQueryType() != ReportQueryType.NONE) {
-            Logger.getLogger(getClass()).info(
-                "    Generating report " + reportDefinition.getName());
+            Logger.getLogger(getClass())
+                .info("    Generating report " + reportDefinition.getName());
 
             final Report report =
                 generateReport(mapProject, mapUser, reportDefinition.getName(),
@@ -726,8 +717,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
 
         if (isDateToRunReport(reportDefinition, localStartDate)) {
 
-          Logger.getLogger(getClass()).info(
-              "    Generating report " + reportDefinition.getName());
+          Logger.getLogger(getClass())
+              .info("    Generating report " + reportDefinition.getName());
           Report report;
           try {
 
@@ -736,8 +727,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
                     reportDefinition, localStartDate, true);
 
             if (report != null) {
-              Logger.getLogger(getClass()).info(
-                  "     Persisting report " + report.toString());
+              Logger.getLogger(getClass())
+                  .info("     Persisting report " + report.toString());
 
               // persist the report
               report = addReport(report);
@@ -770,8 +761,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
    * @throws Exception the exception
    */
   @SuppressWarnings("static-method")
-  private boolean isDateToRunReport(ReportDefinition reportDefinition, Date date)
-    throws Exception {
+  private boolean isDateToRunReport(ReportDefinition reportDefinition,
+    Date date) throws Exception {
 
     Calendar cal = Calendar.getInstance();
     cal.setTime(date);
@@ -803,7 +794,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
             .getActualMaximum(Calendar.DAY_OF_MONTH);
 
       default:
-        throw new Exception("Report definition found with invalid time period.");
+        throw new Exception(
+            "Report definition found with invalid time period.");
     }
   }
 
@@ -824,14 +816,26 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
   // Report Generation Service
   // /////////////////////////////////////////////////////
 
+  /**
+   * Generate report.
+   *
+   * @param mapProject the map project
+   * @param owner the owner
+   * @param name the name
+   * @param reportDefinition the report definition
+   * @param date the date
+   * @param autoGenerated the auto generated
+   * @return the report
+   * @throws Exception the exception
+   */
   /* see superclass */
   @Override
   public Report generateReport(MapProject mapProject, MapUser owner,
     String name, ReportDefinition reportDefinition, Date date,
     boolean autoGenerated) throws Exception {
 
-    Logger.getLogger(getClass()).info(
-        "Generating report " + name + " for report definition "
+    Logger.getLogger(getClass())
+        .info("Generating report " + name + " for report definition "
             + reportDefinition.getName() + " for date " + date.toString());
 
     // instantiate the calendar object
@@ -846,29 +850,23 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     if (reportDefinition.isDiffReport()) {
 
       query =
-      // most recent report before or on specified date
+          // most recent report before or on specified date
           "select 'Report' value, name itemName, id itemId "
               + "from reports where name = '"
-              + reportDefinition.getDiffReportDefinitionName()
-              + "' "
-              + "and mapProjectId = :MAP_PROJECT_ID: "
-              + "and timestamp = "
+              + reportDefinition.getDiffReportDefinitionName() + "' "
+              + "and mapProjectId = :MAP_PROJECT_ID: " + "and timestamp = "
               + "(select max(timestamp) from reports where timestamp <= :TIMESTAMP:"
               + " and mapProjectId = :MAP_PROJECT_ID: and name = '"
-              + reportDefinition.getDiffReportDefinitionName()
-              + "') "
+              + reportDefinition.getDiffReportDefinitionName() + "') "
               + "limit 1 "
 
               // union with most recent report before or on specified date less
               // interval
               // note: surround with parantheses to correctly apply LIMIT
-              + "UNION "
-              + "(select 'Report' value, name itemName, id itemId "
+              + "UNION " + "(select 'Report' value, name itemName, id itemId "
               + "from reports where name = '"
-              + reportDefinition.getDiffReportDefinitionName()
-              + "' "
-              + "and mapProjectId = :MAP_PROJECT_ID: "
-              + "and timestamp = "
+              + reportDefinition.getDiffReportDefinitionName() + "' "
+              + "and mapProjectId = :MAP_PROJECT_ID: " + "and timestamp = "
               + "(select max(timestamp) from reports where timestamp <= :TIMESTAMP2:"
               + " and mapProjectId = :MAP_PROJECT_ID: and name = '"
               + reportDefinition.getDiffReportDefinitionName() + "') "
@@ -894,9 +892,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
 
       // replace the second timestamp with the modified date
       // only used for diff report
-      query =
-          query
-              .replaceAll(":TIMESTAMP2:", Long.toString(cal.getTimeInMillis()));
+      query = query.replaceAll(":TIMESTAMP2:",
+          Long.toString(cal.getTimeInMillis()));
 
       // Force an SQL type because we are actually constructing a query.
       reportDefinition.setQueryType(ReportQueryType.SQL);
@@ -904,24 +901,18 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
 
     // replace the map project id and timestamp parameters
     query = query.replaceAll(":MAP_PROJECT_ID:", mapProject.getId().toString());
-    query =
-        query.replaceAll(":SOURCE_TERMINOLOGY:",
-            mapProject.getSourceTerminology());
-    query =
-        query.replaceAll(":SOURCE_TERMINOLOGY_VERSION:",
-            mapProject.getSourceTerminologyVersion());
-    query =
-        query.replaceAll(":DESTINATION_TERMINOLOGY:",
-            mapProject.getDestinationTerminology());
-    query =
-        query.replaceAll(":DESTINATION_TERMINOLOGY_VERSION:",
-            mapProject.getDestinationTerminologyVersion());
-    query =
-        query.replaceAll(":EDITING_CYCLE_BEGIN_DATE:",
-            Long.toString(mapProject.getEditingCycleBeginDate().getTime()));
-    query =
-        query.replaceAll(":LATEST_PUBLICATION_DATE:",
-            Long.toString(mapProject.getLatestPublicationDate().getTime()));
+    query = query.replaceAll(":SOURCE_TERMINOLOGY:",
+        mapProject.getSourceTerminology());
+    query = query.replaceAll(":SOURCE_TERMINOLOGY_VERSION:",
+        mapProject.getSourceTerminologyVersion());
+    query = query.replaceAll(":DESTINATION_TERMINOLOGY:",
+        mapProject.getDestinationTerminology());
+    query = query.replaceAll(":DESTINATION_TERMINOLOGY_VERSION:",
+        mapProject.getDestinationTerminologyVersion());
+    query = query.replaceAll(":EDITING_CYCLE_BEGIN_DATE:",
+        Long.toString(mapProject.getEditingCycleBeginDate().getTime()));
+    query = query.replaceAll(":LATEST_PUBLICATION_DATE:",
+        Long.toString(mapProject.getLatestPublicationDate().getTime()));
     query = query.replaceAll(":TIMESTAMP:", Long.toString(date.getTime()));
 
     // Handle previous versions
@@ -938,12 +929,10 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
         if (prevDestVersion == null) {
           prevDestVersion = "";
         }
-        query =
-            query.replaceAll(":PREVIOUS_SOURCE_TERMINOLOGY_VERSION:",
-                prevSourceVersion);
-        query =
-            query.replaceAll(":PREVIOUS_DESTINATION_TERMINOLOGY_VERSION:",
-                prevDestVersion);
+        query = query.replaceAll(":PREVIOUS_SOURCE_TERMINOLOGY_VERSION:",
+            prevSourceVersion);
+        query = query.replaceAll(":PREVIOUS_DESTINATION_TERMINOLOGY_VERSION:",
+            prevDestVersion);
       } catch (Exception e) {
         throw e;
       } finally {
@@ -974,8 +963,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
         try {
           results = executeQuery(report.getQuery(), false);
         } catch (java.lang.IllegalArgumentException e) {
-          throw new LocalException("Error executing HQL query: "
-              + e.getMessage());
+          throw new LocalException(
+              "Error executing HQL query: " + e.getMessage());
         }
         break;
       case LUCENE:
@@ -987,8 +976,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
         try {
           results = executeQuery(report.getQuery(), true);
         } catch (javax.persistence.PersistenceException e) {
-          throw new LocalException("Error executing SQL query:  "
-              + e.getMessage());
+          throw new LocalException(
+              "Error executing SQL query:  " + e.getMessage());
         } catch (java.lang.IllegalArgumentException e) {
           throw new LocalException(
               "Error executing SQL query, possible invalid parameters (valid parameters are :MAP_PROJECT_ID:, :TIMESTAMP:):  "
@@ -1017,12 +1006,12 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
       }
 
       // get the ids corresponding to reports to be diffed
-      report.setReport1Id(new Long(results.get(0)[2].toString()));
-      report.setReport2Id(new Long(results.get(1)[2].toString()));
-      Logger.getLogger(getClass()).info(
-          "    report id 1 = " + report.getReport1Id());
-      Logger.getLogger(getClass()).info(
-          "    report id 2 = " + report.getReport2Id());
+      report.setReport1Id(Long.valueOf(results.get(0)[2].toString()));
+      report.setReport2Id(Long.valueOf(results.get(1)[2].toString()));
+      Logger.getLogger(getClass())
+          .info("    report id 1 = " + report.getReport1Id());
+      Logger.getLogger(getClass())
+          .info("    report id 2 = " + report.getReport2Id());
 
       // if either report id is null, cannot construct report, return null
       if (report.getReport1Id() == null || report.getReport2Id() == null) {
@@ -1038,7 +1027,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
       } catch (Exception e) {
         throw new LocalException(
             "Could not retrieve first report for diff report with id "
-                + report.getReport1Id(), e);
+                + report.getReport1Id(),
+            e);
       }
 
       Report report2;
@@ -1047,7 +1037,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
       } catch (Exception e) {
         throw new LocalException(
             "Could not retrieve second report for diff report with id "
-                + report.getReport2Id(), e);
+                + report.getReport2Id(),
+            e);
       }
 
       // cycle over results in first report
@@ -1114,16 +1105,16 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
         valueMap.put(value, reportResult);
       }
     }
-    
+
     // sort results by value field
     Comparator<ReportResult> comparator = new Comparator<ReportResult>() {
-    	  public int compare(ReportResult o1, ReportResult o2) {
-    	    return o1.getValue().compareTo(o2.getValue());
-    	  }
-    	};  	
+      public int compare(ReportResult o1, ReportResult o2) {
+        return o1.getValue().compareTo(o2.getValue());
+      }
+    };
     List<ReportResult> reportResultList = new ArrayList<>(valueMap.values());
     Collections.sort(reportResultList, comparator);
-    
+
     // add each report result to the report
     for (final ReportResult reportResult : reportResultList) {
       report.addResult(reportResult);
@@ -1168,7 +1159,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
 
         // if second result set does not contain this item, add it to result
         // list
-        if (result2 != null && !result2.getReportResultItems().contains(item1)) {
+        if (result2 != null
+            && !result2.getReportResultItems().contains(item1)) {
 
           // construct a new item to ensure clean data structure
           final ReportResultItem newItem = new ReportResultItemJpa();
@@ -1196,7 +1188,7 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
    * @throws Exception the exception
    */
   @SuppressWarnings({
-    "unchecked"
+      "unchecked"
   })
   private List<Object[]> executeQuery(String query, boolean nativeFlag)
     throws Exception {
@@ -1218,8 +1210,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     }
 
     // crude check: check for data manipulation commands
-    if (query.toUpperCase().matches(
-        "ALTER |CREATE |DROP |DELETE |INSERT |TRUNCATE |UPDATE ")) {
+    if (query.toUpperCase()
+        .matches("ALTER |CREATE |DROP |DELETE |INSERT |TRUNCATE |UPDATE ")) {
       throw new LocalException(
           "SQL Query has bad format:  data manipulation request detected");
     }
@@ -1255,8 +1247,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
 
   @Override
   public void removeReportsForIdRange(Long startId, Long endId) {
-    Logger.getLogger(getClass()).info(
-        "Removing reports from id range " + startId + " to " + endId);
+    Logger.getLogger(getClass())
+        .info("Removing reports from id range " + startId + " to " + endId);
     Long counter = startId;
     while (counter <= endId) {
       try {
@@ -1271,7 +1263,7 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
       }
     }
   }
-  
+
   /* see superclass */
   @Override
   public void removeReportsForMapProject(MapProject mapProject, Date startDate,
@@ -1286,8 +1278,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     if (endDate != null) {
       end = endDate;
     }
-    Logger.getLogger(getClass()).info(
-        "Removing reports for project " + mapProject.getName() + ", "
+    Logger.getLogger(getClass())
+        .info("Removing reports for project " + mapProject.getName() + ", "
             + mapProject.getId() + " - " + start + " to " + end);
     for (final Report report : reports.getReports()) {
       if (report.getTimestamp() >= start.getTime()
@@ -1308,11 +1300,9 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
 
     ReportResultItemList reportResultItemList = new ReportResultItemListJpa();
 
-    javax.persistence.Query query =
-        manager
-            .createQuery(
-                "select r from ReportResultItemJpa r where reportResult_id = :reportResultId")
-            .setParameter("reportResultId", reportResultId);
+    javax.persistence.Query query = manager.createQuery(
+        "select r from ReportResultItemJpa r where reportResult_id = :reportResultId")
+        .setParameter("reportResultId", reportResultId);
 
     if (pfsParameter.getStartIndex() != -1
         && pfsParameter.getMaxResults() != -1) {
@@ -1332,10 +1322,10 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     ReportDefinitionList definitionList = new ReportDefinitionListJpa();
 
     // get all definitions
-    List<ReportDefinition> definitions =
-        manager.createQuery(
+    List<ReportDefinition> definitions = manager
+        .createQuery(
             "select d from ReportDefinitionJpa d where isQACheck = true")
-            .getResultList();
+        .getResultList();
 
     // cycle over definitions and check if role has required privileges
     for (final ReportDefinition definition : definitions) {
@@ -1355,9 +1345,8 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
     List<ReportDefinition> qaCheckDefinitions = null;
 
     // construct query
-    javax.persistence.Query query =
-        manager
-            .createQuery("select m from ReportDefinitionJpa m where isQACheck = true");
+    javax.persistence.Query query = manager.createQuery(
+        "select m from ReportDefinitionJpa m where isQACheck = true");
 
     qaCheckDefinitions = query.getResultList();
 
@@ -1371,15 +1360,14 @@ public class ReportServiceJpa extends RootServiceJpa implements ReportService {
   /* see superclass */
   @Override
   public SearchResultList getQALabels(Long mapProjectId) throws Exception {
-    Logger.getLogger(getClass()).debug(
-        "Reoprt Service - get QA Labels - " + mapProjectId);
+    Logger.getLogger(getClass())
+        .debug("Reoprt Service - get QA Labels - " + mapProjectId);
 
     // Look up distinct label values used by QA records.
-    final javax.persistence.Query query =
-        manager
-            .createQuery("select distinct l from MapRecordJpa m JOIN m.labels l "
-                + "WHERE m.mapProjectId = :mapProjectId "
-                + "AND m.workflowStatus = 'QA_NEEDED'");
+    final javax.persistence.Query query = manager
+        .createQuery("select distinct l from MapRecordJpa m JOIN m.labels l "
+            + "WHERE m.mapProjectId = :mapProjectId "
+            + "AND m.workflowStatus = 'QA_NEEDED'");
     // TODO: may need to remove where not al
     try {
       query.setParameter("mapProjectId", mapProjectId);
